MODSOURMAN-1028 Sonar fixes